# BitTorrent

./: .gitignore  CMakeLists.txt  Common.cfg  Logger.cpp  Logger.h  PeerInfo.cfg  README.md  client.cpp  main.cpp  peer.cpp  peer.h  server.cpp  start_all.sh
peer_1004/: peerProcess
